<resources>
    <string name="app_name">Bazaar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_page_title">Log In</string>
    <string name="minta_gmail_com">minta@gmail.com</string>
    <string name="password_hint_text">Password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="login_registerText">New to Bazaar?</string>
    <string name="sign_up_buttonText">Sign Up</string>
    <string name="registerTitle_text">Register</string>
    <string name="first_name_hintText">First Name</string>
    <string name="last_name_hintText">Last Name</string>
    <string name="register_buttonText">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username_input_hintText">Username</string>
    <string name="order_button_text">Order Now</string>
    <string name="after_register_title_text">Thank you for joining the Bazaar\'s community! We will send an activation link to your email adress!</string>
    <string name="activation_textviewLink_text">Didn\'t receive email? Please click here in order to activate your account!</string>
    <string name="timeline_text">Timeline</string>
    <string name="my_market_text">My market</string>
    <string name="my_fares_text">My fares</string>
    <string name="avaible_amount_text">Avaible amount:</string>
    <string name="email_hinttext">Email</string>
    <string name="forgot_password_labelText">Forgot Password</string>
    <string name="after_forgot_password_text">An email was sent to your address with the instructions on how to reset your password.</string>
    <string name="forgot_password_text">We will send you an email with instructions on how to reset your password.</string>
    <string name="upload_product_date_label_text">Today</string>

    <string-array name="Price_Type">
        <item>RON</item>
        <item>EURO</item>
        <item>HUF</item>
    </string-array>

    <string-array name="Amount_type">
        <item>Kg</item>
        <item>g</item>
        <item>db</item>
        <item>L</item>
        <item>m</item>
    </string-array>

</resources>