<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentRegister">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/registerTitle_text"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLogo" />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="297dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/minta_gmail_com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_input"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/password_hint_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_input"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#05E4D0"
        android:text="@string/register_buttonText"
        android:textColor="#006064"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_input"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/register_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:text="@string/already_have_an_account"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_login_hiperlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/log_in_button_text"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/register_bottom_text" />

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="308dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/username_input_hintText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_bazaar_logo_coloured"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>